--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
             <version>${joda-time.version}</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
+            <groupId>mysql</groupId>w
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector-java.version}</version>
         </dependency>
