--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,15 @@
     </filter-mapping>
 
     <filter>
+        <filter-name>LocaleFilter</filter-name>
+        <filter-class>com.epam.ok.storeCenter.servlet.LocaleFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LocaleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
         <filter-name>SecurityFilter</filter-name>
         <filter-class>com.epam.ok.storeCenter.servlet.SecurityFilter</filter-class>
     </filter>
